# media-reviews

./: .gitignore  main.py  pyproject.toml
core/: logging.py  settings.py  urls.py
registration/: forms.py  urls.py  views.py
reviews/: forms.py  models.py  urls.py  views.py
reviews/migrations/: 0001_initial.py
static/css/: custom.css  tailwind.css
templates/includes/: footer.html  nav.html
templates/layouts/: base.html
templates/registration/: signup.html
templates/reviews/: index.html  review_card.html  review_create.html  review_list.html
