[project]
name = "media-reviews"
version = "0.1.0"
description = "Website for leave feedback about books, films and etc."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cookiecutter>=2.6.0",
    "django>=6.0.1",
    "django-browser-reload>=1.21.0",
    "django-htmx>=1.27.0",
    "django-tailwind-cli>=4.5.1",
    "loguru>=0.7.3",
    "psycopg[binary]>=3.3.2",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "ruff>=0.14.13",
]
